@@ -8,6 +8,10 @@
 
 * Features as they come in
 
+** <2025-04-20> *0.9.33*
+
+Fixed utf-8 encoding stream response issues from remote LLMs.
+
 ** <2025-04-19> *0.9.32*
 
 Finished the remote LLM decoupling process, meaning that the core =ollama-buddy= logic is now not dependent on any remote LLM, and each remote LLM package is self-contained and functions as a unique extension.
